--- a/views/html/contact.html
+++ b/views/html/contact.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact</title>
+    <title>Contact </title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="scss/main.css">
-    <link rel="stylesheet" href="scss/skin.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">    
+    <link rel="stylesheet" type="text/css" href="../css/skin.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="./script/index.js"></script>
+    <script src="../../../assets/script/index.js"></script>    
+
 </head>
 
 <body id="wrapper">
@@ -22,8 +23,8 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
-                        <li><i class="fa fa-phone"></i><a href="#">+91 848 594 5080</a></li>
-                        <li><i class="fa fa-envelope"></i><a href="#">sales@aspiresoftware.in</a></li>
+                        <li><i class="fa fa-phone"></i><a href="#">+0912 242 189</a></li>
+                        <!-- <li><i class="fa fa-envelope"></i><a href="#">sales@aspiresoftware.in</a></li> -->
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -31,7 +32,7 @@
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li> -->
                         <li><a href="#"><i class="fa fa-skype"></i></a></li>
                     </ul>
                 </div>
@@ -52,16 +53,16 @@
 				<span class="icon-bar"></span>
 			  </button>
                     <a class="navbar-brand" href="#">
-                        <h1>Aspire</h1><span>Software Solutions</span></a>
+                        <!-- <h1>Aspire</h1><span>Software Solutions</span></a> -->
+                        <h3>Southern Educational Institute</h3><span>Galle</span></a> 
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="features.html">Features</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li class="active"><a href="#contact">Contact</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="class_schedule.html">Class Schedule</a></li>
+                        <li class="active"><a href="#contact">Contact Us</a></li>
+                        <!-- <li><a href="contact.html">Contact Us</a></li> -->
                         <li><a href="login.html">Sign In</a></li>
                         <li><a href="registration.html">Sign Up</a></li>
                     </ul>
@@ -184,11 +185,17 @@
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-12 block">
                     <div class="footer-block">
-                        <h4>Address</h4>
+                        <h4>Sothern Institute Galle</h4>
+                        <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                        <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                            <img src="..\..\..\assets1\img\map.png">
+                        </a>
+                        <hr/>
+                        <!-- <h4>Address</h4>
                         <hr/>
                         <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.
                         </p>
-                        <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a>
+                        <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
                     </div>
                 </div>
 
@@ -197,12 +204,12 @@
                         <h4>Useful Links</h4>
                         <hr/>
                         <ul class="footer-links">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="class_schedule.html">Class Schedule</a></li>
+                            <!-- <li><a href="contact.html">Contact Us</a></li> -->
+                            <li><a href="login.html">Sign In</a></li>
+                            <li><a href="registration.html">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
@@ -254,14 +261,15 @@
                     <a href="#">Terms of Use</a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">Aspire Software Solutions</a> designed by <a href="#">Designing Team</a>
+                        Developed by <a href="#">Team Innoview</a> designed by <a href="#">UCSC</a>
+                    <!-- Developed by <a href="#">Aspire Software Solutions</a> designed by <a href="#">Designing Team</a> -->
                 </div>
             </div>
         </div>
     </section>
 
 
-    <div id="panel">
+    <!-- <div id="panel">
         <div id="panel-admin">
             <div class="panel-admin-box">
                 <div id="tootlbar_colors">
@@ -276,7 +284,7 @@
 
         </div>
         <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
-    </div>
+    </div> -->
 </body>
 
 </html>
