--- a/views/html/about.html
+++ b/views/html/about.html
@@ -72,6 +72,9 @@
     </header>
     <section id="top_banner">
         <div class="banner">
+                <div class="inner text-center">
+                        <div class="fill"><img alt="" src="../../../assets1/img/pic.jpg" width="1350" height="100" alt="Galle fort"></div>        
+                </div>
                 
             <!-- <div class="inner text-center">
                 <h2>Lorem ipsum dolor sit amet</h2>
@@ -82,12 +85,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-50 col-sm-50 col-xs-100">
-                         <div class="fill" style="background-image:url('../../../assets1/img/pic.jpg');">
+                         <!-- <div class="fill" style="background-image:url('../../../assets1/img/pic.jpg');"> -->
                             <h4>About</h4>
-                        </div>
+                        <!-- </div> -->
                     </div>
-                    <!-- <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Home<span class="sep"> 	/ </span><span class="current"> About</span></div>
-                 -->
+                    <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:left;">Home<span class="sep"> 	/ </span><span class="current"> About</span></div>
+                
                 </div>
             </div>
         </div>
@@ -99,23 +102,30 @@
     <section id="about-page-section-3">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7 text-align">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-align">
                     <div class="section-heading">
-                        <h2>Our <span>Story.</span></h2>
+                        <!-- <h2>Our <span>Story.</span></h2> -->
                         <p class="subheading">Vision</p>
                     </div>
                     <p>
-                        Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consec tetuer adipis elit, aliquam eget nibh etlibura. Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consec tetuer adipis elit, aliquam eget nibh
-                        etlibura. Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consec tetuer adipis elit, aliquam eget nibh etlibura.
-
-                        <br><br> Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consec tetuer adipis elit, aliquam eget nibh etlibura. Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consec tetuer
-                        adipis elit, aliquam eget nibh etlibura.
-
+                        <b>"To be the foremost educatioal institute in Sri Lanka To produce high calibre students."</b>
+                        <br/><br/> OUR MISSION<br/>
+                        <b>“To guide our students towards the fortunes of knowledge.
+                        To produce winners amongst winners as well as disciplined all-round individuals with respectable social values.”</b>
+                        <br/><br/>WHO WE ARE<br/>
+                        <b>Established as a secondary educational institute catering to the young individuals waiting to contribute to the growth of the country, “Southern” is perhaps the most common name that comes to the minds of both parents and students in search of assistance in studies.
+                         Over the years our institute has produced some of the top scoring students in the Island in the Science, Mathematics, Commerce and Art streams who not only have the subject knowledge but also are talented in applying it in real life situations.
+                        By being true to our mission statement “To guide our students towards the fortunes of knowledge producing winners amongst winners as well as disciplined all-round individuals with respectable social values”. 
+                        Southern Education Institute is the only organization to recognize and celebrate the achievements of their best performers.</b>
                     </p>
-                    <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
+                    <!-- <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
+                 -->
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
-                    <img height="" width="auto" src="../../../assets1/img/iphone62.png" class="attachment-full img-responsive" alt="">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <img height="" width="auto" src="../../../assets1/img/awards.jpg" class="attachment-full img-responsive" alt="">
+                    <img height="" width="auto" src="../../../assets1/img/southrn.jpg" class="attachment-full img-responsive" alt="">
+                    <img height="" width="auto" src="../../../assets1/img/stu.jpg" class="attachment-full img-responsive" alt="">
+               
                 </div>
             </div>
         </div>
@@ -129,8 +139,9 @@
                 <div class="row">
                     <div class="col-lg-12 xol-md-12 col-sm-12 col-xs-12">
                         <div class="section-heading text-center">
-                            <h2>Our <span>Skills</span></h2>
-                            <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
+                            <h2>Our <span>Story</span></h2>
+                            <!-- <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
+                         -->
                         </div>
 
 
@@ -144,11 +155,11 @@
                                     <span class="progress-right">
                     <span class="progress-bar"></span>
                                     </span>
-                                    <div class="progress-value">90%</div>
+                                    <div class="progress-value">50000</div>
 
                                 </div>
                                 <div class="progress-title">
-                                    <h5>Portal Development</h5>
+                                    <h5>Followers</h5>
                                 </div>
                             </div>
 
@@ -160,13 +171,13 @@
                                     <span class="progress-right">
                     <span class="progress-bar"></span>
                                     </span>
-                                    <div class="progress-value">75%</div>
+                                    <div class="progress-value">50</div>
                                 </div>
                                 <div class="progress-title">
-                                    <h5>Enterprise Mobility</h5>
+                                    <h5>Certified Teachers</h5>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-6 block mybox">
+                            <!-- <div class="col-md-3 col-sm-6 col-xs-6 block mybox">
                                 <div class="progress color progress-bar-3">
                                     <span class="progress-left">
                     <span class="progress-bar"></span>
@@ -179,20 +190,20 @@
                                 <div class="progress-title">
                                     <h5>Start Up</h5>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="col-md-3 col-sm-6 col-xs-6 block mybox">
-                                <div class="progress color progress-bar-4">
+                                <div class="progress color progress-bar-3">
                                     <span class="progress-left">
                     <span class="progress-bar"></span>
                                     </span>
                                     <span class="progress-right">
                     <span class="progress-bar"></span>
                                     </span>
-                                    <div class="progress-value">80%</div>
+                                    <div class="progress-value">80</div>
                                 </div>
                                 <div class="progress-title">
-                                    <h5>Product Development</h5>
+                                    <h5>Complete courses</h5>
                                 </div>
                             </div>
 
@@ -200,15 +211,27 @@
                     </div>
                 </div>
     </section>
-    <section id="team-member">
+    <section id="facilities">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 xol-md-12 col-sm-12 col-xs-12">
                     <div class="section-heading text-center">
-                        <h1>Our <span>Team</span></h1>
-                        <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
+                        <h1>Facilities</span></h1>
+                        <p class="subheading">We provide a well equipped institute with state of the art facilities, starting from classrooms to the nitty-gritty’s to make the studying
+                                experience of our students an easy and a well facilitated one. Parents are assured of the safety of their children at “Southern” and discipline is of utmost importance to us.</p>
+                        <br/>
+                        <!-- <div class="btn-group">
+                                <button>Apple</button>
+                                <button>Samsung</button>
+                                <button>Sony</button>
+                              </div> -->
+                        <h1>Lecture Halls</span></h1>
+                            <p class="subheading">The lecture halls at our institute are spacious and contain comfortable seating arrangements to accommodate a large audience. These halls are soundproof and contain multimedia projection and AV facilities.</p>
+                               
+                        <p class="subheading"><h1>   Online examinations/ E-Learning</h1>
+                            <p class="subheading">Students have the opportunity to participate for exams online and special e-learning services are also provided for those in need of such facilities.</p>
                     </div>
-                    <div class="wpb_column vc_column_container col-md-3 col-sm-6 col-xs-6 block mybox">
+                    <!-- <div class="wpb_column vc_column_container col-md-3 col-sm-6 col-xs-6 block mybox">
                         <div class="vc_column-inner">
                             <div class="wpb_wrapper">
                                 <div class="our-team main-info-below-image">
@@ -326,8 +349,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
