--- a/views/html/contact.html
+++ b/views/html/contact.html
@@ -73,18 +73,20 @@
         <!--/.nav-ends -->
     </header>
     <section id="top_banner">
-        <div class="banner">
-            <div class="inner text-center">
-                <h2>Lorem ipsum dolor sit amet</h2>
-            </div>
+         <div class="banner">
+                <div class="inner text-center">
+                        <div class="fill"><img alt="" src="../../../assets1/img/pic.jpg" width="1350" height="100" alt="Galle fort"></div>        
+                </div>
         </div>
         <div class="page_info">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-sm-8 col-xs-6">
-                        <h4>Contact</h4>
+                    <div class="col-md-50 col-sm-50 col-xs-100">
+                           <h4>Contact INFo</h4>
+                        <h5>Welcome to our Website.We are glad to have you around.</h5>
+                        <!-- </div> -->
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Home<span class="sep"> / </span><span class="current">Contact</span></div>
+                    <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:left;">Home<span class="sep"> / </span><span class="current">Contact</span></div>
                 </div>
             </div>
         </div>
@@ -95,7 +97,7 @@
         <div class="container">
             <div class="section-heading text-center">
                 <h2>Drop your <span>Message</span></h2>
-                <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
+                <p class="subheading">Your email address will not be published.Required fields are marked.</p>
             </div>
             <div class="row contact-wrap">
                 <div class="status alert alert-success" style="display: none"></div>
@@ -114,7 +116,7 @@
                             <input type="number" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>Company Name</label>
+                            <label>Southern Institute ID</label>
                             <input type="text" class="form-control">
                         </div>
                     </div>
@@ -128,8 +130,9 @@
                             <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
                         </div>
                         <div class="form-group">
-                            <button type="submit" name="submit" class="btn btn-default submit-button">Submit Message <i class="fa fa-caret-right"></i></button>
-                        </div>
+                            <button type="submit" name="submit" class="btn btn- submit-button">Submit Message <i class="fa fa-caret-right"></i></button>
+                            <!-- <input type="submit" name="submit" value="submit" onclick="registrationform();"></input> -->
+                        </div> 
                     </div>
                 </form>
             </div>
@@ -142,25 +145,32 @@
                     <div class="row">
                         <div class="col-sm-5">
                             <div class="gmap">
-                                <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe>
-                            </div>
+                                    <!-- <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" > -->
+                                    <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                                        <img src="..\..\..\assets1\img\map2.png" width="500" heiht="200"></img>
+                                    </a>
+                               /
+                                <!-- <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/place/Southern+Educational+Institute/@6.0430383,80.2116041,17z/data=!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203;output=embed"></iframe>
+                          -->
+                                    <!-- <a href="https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203" ></a> 
+                             -->
+                             </div>
                         </div>
                         <div class="col-sm-7 map-content">
                             <ul class="row">
                                 <li class="col-sm-6">
                                     <address>
-									<h5>Head Office</h5>
-									<p>Aspire Software Solutions <br>
-									202, Parishram Complex,<br>
-									Mithakhali Six Roads,<br>
-									Navrangpura, Ahmedabad,<br>
-									Gujarat, India. </p>
-										<p>Phone:+91 848 594 5080 <br>
-									Email Address:sales@aspiresoftware.in</p>
+									<h5>Place</h5>
+									<p>Southern Educational Institute <br>
+                                    Wimalasurendra Mawatha,<br>
+									Galle 80000,<br>
+									Sri Lanka. </p>
+										<p>Phone:+0912 242 189<br>
+									<!-- Email Address:sales@aspiresoftware.in</p> -->
 								</address>
 
                                 </li>
-                                <li class="col-sm-6">
+                                <!-- <li class="col-sm-6">
                                     <address>
 									<h5>Zone#2 Office</h5>
 									<p>Aspire Software Solutions <br>
@@ -172,7 +182,7 @@
 									Email Address:sales@aspiresoftware.in</p>
 								</address>
 
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
