--- a/views/html/home.html
+++ b/views/html/home.html
@@ -434,5 +434,5 @@
         </div>
         <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
     </div> -->
-
+</body>
 </html>
