--- a/views/html/receptionist.html
+++ b/views/html/receptionist.html
@@ -7,12 +7,12 @@
     <title>Receptionist Home Page</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="scss/main.css">
-    <link rel="stylesheet" href="scss/skin.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">    
+    <link rel="stylesheet" type="text/css" href="../css/skin.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="./script/index.js"></script>
+    <script src="../../../assets/script/index.js"></script>   
 </head>
 
 <body id="wrapper">
