--- a/views/css/main.css
+++ b/views/css/main.css
@@ -27,6 +27,86 @@ audio:not([controls]) {
  [hidden], template {
 display: none;
 }
+
+/* {
+	box-sizing: border-box;
+  }
+  
+  
+  form.example input[type=text] {
+	padding: 10px;
+	font-size: 17px;
+	border: 1px solid grey;
+	float: left;
+	width: 80%;
+	background: #f1f1f1;
+  }
+  
+  
+  form.example button {
+	float: left;
+	width: 20%;
+	padding: 10px;
+	background: #2196F3;
+	color: white;
+	font-size: 17px;
+	border: 1px solid grey;
+	border-left: none; 
+	cursor: pointer;
+  }
+  
+  form.example button:hover {
+	background: #0b7dda;
+  }
+  
+  
+  form.example::after {
+	content: "";
+	clear: both;
+	display: table;
+  }
+
+ */
+
+/* body {
+  font-family: Arial;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+} */
+
 a {
 	background-color: transparent;
 }
@@ -1018,6 +1098,37 @@ h2, h3 {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+/* .fa {
+	padding: 20px;
+	font-size: 30px;
+	width: 50px;
+	text-align: center;
+	text-decoration: none;
+	margin: 0px 3px;
+  }
+   */
+  /* .fa:hover {
+	  opacity: 0.7;
+  } */
+  
+  /* .fa-facebook {
+	background: #3B5998;
+	color: white;
+	margin: 80px 3px;
+  }
+  .fa-twitter {
+	background: #55ACEE;
+	color: white;
+  }
+  
+  .fa-linkedin {
+	background: #007bb5;
+	color: white;
+  }
+  .fa-skype {
+	background: #00aff0;
+	color: white;
+  } */
 html {
 	font-size: 10px;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -2726,7 +2837,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 	background-image: none;
 }
 .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus {
-	background-color: #fff;
+	background-color:#fff;
 	border-color: #ccc;
 }
 .btn-default .badge {
@@ -5836,6 +5947,10 @@ body .navbar-brand {
 	padding: 15px 15px;
 }
 }
+/* body{
+	background: url(../../../assets1/img/pic.jpg);    
+	background-size: contain;
+} */
 body .heading, body .section-heading h1, body #features h1, body #about h1, body #process h1, body #testimonial h1, body #about-page-section-3 h1, body #skills h1, body #team-member h1, body #top_banner h1, body #portfolio h1, body #faq h1, body #contact h1, body #contact-page h1, body #features-page .subsection1 h1, body #features-page .subsection2 h1, body #features-page .subsection3 .right-section h1, body #features-page .subsection3 .left-section h1, body #features-page .subsection4 h1, body #login-reg h1, body .section-heading .h1, body #features .h1, body #about .h1, body #process .h1, body #testimonial .h1, body #about-page-section-3 .h1, body #skills .h1, body #team-member .h1, body #top_banner .h1, body #portfolio .h1, body #faq .h1, body #contact .h1, body #contact-page .h1, body #features-page .subsection1 .h1, body #features-page .subsection2 .h1, body #features-page .subsection3 .right-section .h1, body #features-page .subsection3 .left-section .h1, body #features-page .subsection4 .h1, body #login-reg .h1, body .section-heading h2, body #features h2, body #about h2, body #process h2, body #testimonial h2, body #about-page-section-3 h2, body #skills h2, body #team-member h2, body #top_banner h2, body #portfolio h2, body #faq h2, body #contact h2, body #contact-page h2, body #features-page .subsection1 h2, body #features-page .subsection2 h2, body #features-page .subsection3 .right-section h2, body #features-page .subsection3 .left-section h2, body #features-page .subsection4 h2, body #login-reg h2, body .section-heading .h2, body #features .h2, body #about .h2, body #process .h2, body #testimonial .h2, body #about-page-section-3 .h2, body #skills .h2, body #team-member .h2, body #top_banner .h2, body #portfolio .h2, body #faq .h2, body #contact .h2, body #contact-page .h2, body #features-page .subsection1 .h2, body #features-page .subsection2 .h2, body #features-page .subsection3 .right-section .h2, body #features-page .subsection3 .left-section .h2, body #features-page .subsection4 .h2, body #login-reg .h2, body .section-heading h3, body #features h3, body #about h3, body #process h3, body #testimonial h3, body #about-page-section-3 h3, body #skills h3, body #team-member h3, body #top_banner h3, body #portfolio h3, body #faq h3, body #contact h3, body #contact-page h3, body #features-page .subsection1 h3, body #features-page .subsection2 h3, body #features-page .subsection3 .right-section h3, body #features-page .subsection3 .left-section h3, body #features-page .subsection4 h3, body #login-reg h3, body .section-heading .h3, body #features .h3, body #about .h3, body #process .h3, body #testimonial .h3, body #about-page-section-3 .h3, body #skills .h3, body #team-member .h3, body #top_banner .h3, body #portfolio .h3, body #faq .h3, body #contact .h3, body #contact-page .h3, body #features-page .subsection1 .h3, body #features-page .subsection2 .h3, body #features-page .subsection3 .right-section .h3, body #features-page .subsection3 .left-section .h3, body #features-page .subsection4 .h3, body #login-reg .h3, body .section-heading h4, body #features h4, body #about h4, body #process h4, body #testimonial h4, body #about-page-section-3 h4, body #skills h4, body #team-member h4, body #top_banner h4, body #portfolio h4, body #faq h4, body #contact h4, body #contact-page h4, body #features-page .subsection1 h4, body #features-page .subsection2 h4, body #features-page .subsection3 .right-section h4, body #features-page .subsection3 .left-section h4, body #features-page .subsection4 h4, body #login-reg h4, body .section-heading .h4, body #features .h4, body #about .h4, body #process .h4, body #testimonial .h4, body #about-page-section-3 .h4, body #skills .h4, body #team-member .h4, body #top_banner .h4, body #portfolio .h4, body #faq .h4, body #contact .h4, body #contact-page .h4, body #features-page .subsection1 .h4, body #features-page .subsection2 .h4, body #features-page .subsection3 .right-section .h4, body #features-page .subsection3 .left-section .h4, body #features-page .subsection4 .h4, body #login-reg .h4, body .section-heading h5, body #features h5, body #about h5, body #process h5, body #testimonial h5, body #about-page-section-3 h5, body #skills h5, body #team-member h5, body #top_banner h5, body #portfolio h5, body #faq h5, body #contact h5, body #contact-page h5, body #features-page .subsection1 h5, body #features-page .subsection2 h5, body #features-page .subsection3 .right-section h5, body #features-page .subsection3 .left-section h5, body #features-page .subsection4 h5, body #login-reg h5, body .section-heading .h5, body #features .h5, body #about .h5, body #process .h5, body #testimonial .h5, body #about-page-section-3 .h5, body #skills .h5, body #team-member .h5, body #top_banner .h5, body #portfolio .h5, body #faq .h5, body #contact .h5, body #contact-page .h5, body #features-page .subsection1 .h5, body #features-page .subsection2 .h5, body #features-page .subsection3 .right-section .h5, body #features-page .subsection3 .left-section .h5, body #features-page .subsection4 .h5, body #login-reg .h5, body .section-heading h6, body #features h6, body #about h6, body #process h6, body #testimonial h6, body #about-page-section-3 h6, body #skills h6, body #team-member h6, body #top_banner h6, body #portfolio h6, body #faq h6, body #contact h6, body #contact-page h6, body #features-page .subsection1 h6, body #features-page .subsection2 h6, body #features-page .subsection3 .right-section h6, body #features-page .subsection3 .left-section h6, body #features-page .subsection4 h6, body #login-reg h6, body .section-heading .h6, body #features .h6, body #about .h6, body #process .h6, body #testimonial .h6, body #about-page-section-3 .h6, body #skills .h6, body #team-member .h6, body #top_banner .h6, body #portfolio .h6, body #faq .h6, body #contact .h6, body #contact-page .h6, body #features-page .subsection1 .h6, body #features-page .subsection2 .h6, body #features-page .subsection3 .right-section .h6, body #features-page .subsection3 .left-section .h6, body #features-page .subsection4 .h6, body #login-reg .h6, body #about .about-list h3, body #about .about-list .h3 {
 	color: #333333;
 	text-transform: uppercase;
@@ -5918,7 +6033,7 @@ body #top-header ul.contact_links li {
 	margin-right: 20px;
 }
 body #top-header ul.contact_links i {
-	margin-right: 10px;
+	margin-left: 10px;
 	color: #fff;
 }
 body #top-header ul.contact_links a {
@@ -5931,7 +6046,7 @@ body #top-header ul.social_links {
 	float: right;
 }
 body #top-header ul.social_links li {
-	float: left;
+	float:left;
 	display: inline-block;
 	margin-right: 5px;
 }
@@ -6285,7 +6400,8 @@ body #about .section-block, body #about #features, body #about #process, body #a
 	display: inline-block;
 }
 body #about .background-imgholder {
-	background: url(../img/1.jpg);
+	background: url(assets1\img\pic.jpg);
+	
 	position: absolute;
 	width: 100%;
 	height: 100%;
