--- a/views/html/login.html
+++ b/views/html/login.html
@@ -137,16 +137,16 @@
                                         <i class="fa fa-key"></i>
                                     </div>
                                 </div>
-                                 <div class="form-bottom">
-                                    <form role="form" action="" class="login-form" >
-                                        <div class="input-group form-group">
-                                            <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
-                                            <input type="text" id="user_name" class="form-control" placeholder="Username" aria-describedby="basic-addon1" required="required">
-                                        </div>
-                                        <div class="input-group form-group">
-                                            <span class="input-group-addon" id="basic-addon1"><i class="fa fa-unlock"></i></span>
-                                            <input type="password" id="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" required="required">
-                                        </div>
+                                <div class="form-bottom">
+                                        <form role="form" action="" class="login-form" >
+                                            <div class="input-group form-group">
+                                                <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
+                                                <input type="text" id="user_name" name="user_name" class="form-control" placeholder="username" aria-describedby="basic-addon1" required="required">
+                                            </div>
+                                            <div class="input-group form-group">
+                                                <span class="input-group-addon" id="basic-addon1"><i class="fa fa-unlock"></i></span>
+                                                <input type="password" id="password" name="password" class="form-control" placeholder="**********" aria-describedby="basic-addon1" required="required">
+                                            </div>
                                         <!-- <div class="input-group form-group">   -->
                                                 <!-- <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
                                                  <input type="checkbox" name="type1" value="Admin"> Admin<br>
@@ -170,18 +170,17 @@
                                             <!-- </div> -->
                                          <!-- <td><input type="submit" value="LOGIN" onclick="loginform();"></td>    
                                          --> 
-                                         <span>
                                          <div class="text-center" >
-                                            <button type="submit" name="submit" class="btn btn- submit-button" onclick="loginform();">LOGIN<i class="fa fa-caret-right"></i></button>
-                                            
-                                            <!-- <input type="submit" value="LOGIN"  onclick="loginform();"></input><br/> -->
-                                            <td>or</td><br/>
-                                                <td><a href="#">Forgot password</a></td>
-                                            </div>
-                                        <!-- </center>  -->
-                                        </span>
-                                    </form>
-                                </div>
+                                                <!-- <button type="submit" name="submit" class="btn btn- submit-button" onclick="loginform();">LOGIN<i class="fa fa-caret-right"></i></button>
+                                                    -->
+                                                   <input name="submit" type="submit" value="LOGIN"  onclick="loginform();"></input><br/>
+                                                   <td>or</td><br/>
+                                                       <td><a href="#">Forgot password</a></td>
+                                                   </div>
+                                               <!-- </center>  -->
+                           
+                                           </form>
+                                       </div>
         
                     <!-- <div class="form-box">
                         <div class="form-top">
